@@ -1,3 +1,4 @@
+EBUILD stax-api-1-r1.ebuild 608 RMD160 3e1f8775b4672a95faa1af463c4fb7e3e66d242a SHA1 f0fc92edbf999c4965d84cc17f2c6e31fcc76f3c SHA256 9f94601b15e40b9c6995b3e2036cbb07ee1ecd520f278c8107ca3bc1fdd0e76c
 EBUILD stax-api-1.ebuild 644 RMD160 dce4dd4a0e1c00d8dd581f65a48685b8f36d57ad SHA1 80baf766f3fc1e08f1f5788d6ac45d0f23826c75 SHA256 4c7f7078665a7a7c02ac840669ff13b7509e609f2def5ff9dc5a5412c9580f8e
-MISC ChangeLog 463 RMD160 1ae85962ec403c520ca512c4ca579360308e3c29 SHA1 07d01ae1cd7bedb753edece654dac04689a17685 SHA256 9be9ba58ba52352d2f71b3424483deb05d1b4654c6142d5cfa1b8632caafdfd5
+MISC ChangeLog 628 RMD160 fd7845d915b18995102e9930dcdcb9cb1be108af SHA1 2157b3305884cc1ea6e6c8562e54d6c874f27334 SHA256 42b2e0942e3f8c2c764eea92a8c0a4a36a99df06761ffa0b8f0a3469db633b18
 MISC metadata.xml 256 RMD160 48a6679abaac07f4273083a8d4fe91d2b6485e58 SHA1 42434bcd814ba90f4461ba6154ff8740e1e60092 SHA256 1dc1a92c33c0514ebc5c27f785eb3eee2f36c6e1e9cadf96b0ccee7901e7da56
