@@ -1,0 +1,27 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/java-virtuals/stax-api/stax-api-1-r1.ebuild,v 1.1 2009/05/23 11:52:55 ali_bush Exp $
+
+EAPI=1
+
+inherit java-virtuals-2
+
+DESCRIPTION="Virtual for Streaming API for XML (StAX)"
+HOMEPAGE="http://www.gentoo.org"
+SRC_URI=""
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos"
+IUSE=""
+
+DEPEND=""
+RDEPEND="|| (
+			virtual/jre:1.6
+			dev-java/jsr173
+		)
+		>=dev-java/java-config-2.1.8
+		"
+
+JAVA_VIRTUAL_PROVIDES="jsr173"
+JAVA_VIRTUAL_VM="virtual/jre:1.6"
